# fiction

./: README.md
cli/cmd/io/: tt.hpp
experiments/: CMakeLists.txt  efficient_gate_designer_paper.cpp  fiction_experiments.hpp  print_gate_with_defect.cpp
experiments/color_routing/: color_routing.cpp
experiments/dissertation_demo/: dissertation_c++.cpp  thesis_automatic_exhaustive_gate_designer.cpp  thesis_operational_domain.cpp  thesis_quickcell.cpp  thesis_quickexact.cpp  thesis_quicksim.cpp  thesis_temperature.cpp
experiments/operational_domain/: critical_temperature_domain_bestagon.cpp  operational_domain_3d_bestagon.cpp  operational_domain_3d_siqad.cpp  operational_domain_bestagon.cpp  operational_domain_bestagon_grid_vs_sketch.cpp  operational_domain_siqad.cpp
experiments/operational_domain_picture_for_video/: operational_domain_3d_bestagon_contour_single_plots.cpp  operational_domain_3d_bestagon_flood_fill_single_plots.cpp  operational_domain_3d_bestagon_grid_search_single_plots.cpp  operational_domain_3d_bestagon_random_search_single_plots.cpp
experiments/performance_of_different_access_operators_vector/: performance_different_access_operators.cpp
experiments/physical_design_with_on_the_fly_gate_design/: on_the_fly_sidb_circuit_design_on_defective_surface.cpp  physical_design_with_on_the_fly_gate_design.cpp
experiments/quicktrace/: quicktrace_video.cpp  quicktrace_vs_grid_search_bestagon.cpp
experiments/simulation/: equally_spacing.cpp  simu.cpp  simu.h
experiments/simulation_sidb/: ExGS_bestagon_gate.cpp  exhaustive_ground_state_simulation_bestagon_gate.cpp  quicksim_bestagon_gate.cpp  simulation_sidb.cpp  simulation_sidb_inve.cpp  tts_acc_all_bestagon.cpp
(+982 files in other folders)
